--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,6 +17,9 @@ img{
   width: 100%;
 }
 .form-wrap{
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,13 +85,12 @@ img{
 }
 
 .gallery{
-  /* display: flex;
-  flex-direction: row;
-  flex-wrap: wrap; */
+  margin-top: 105px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
-  margin: 0px 15px;
+  gap: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
 }
 
 .info{
